Edited wiki page FAQ through web user interface.

--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -20,9 +20,9 @@ The code in the [https://code.google.com/p/dkpro-wsd/ dkpro-wsd project] is lice
 
 === How do I get DKPro WSD? ===
 
-The [https://code.google.com/p/dkpro-wsd/source/checkout source code for DKPro WSD] (and the [https://code.google.com/p/dkpro-wsd-gpl/source/checkout DKPro WSD GPL components]) is available in Google Code's Subversion repository.
+The Google Code Subversion repository contains [https://code.google.com/p/dkpro-wsd/source/checkout source code for DKPro WSD] and the [https://code.google.com/p/dkpro-wsd-gpl/source/checkout DKPro WSD GPL components].
 
-Maven users can obtain prepackage artifacts by adding the following repository section to your project:
+Maven users can obtain prepackaged artifacts by adding the following repository section to your project:
 
 {{{
 <repositories>
