Edited wiki page FAQ through web user interface.

--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -99,6 +99,10 @@ First, refer to our table of [WSDCorpora WSD corpora] to find out which sense in
 
 Note that for some sense inventories, you can use various modules, depending on the underlying library you prefer to use.  For example, WordNet can be accessed via `de.tudarmstadt.ukp.dkpro.wsd.si.wordnet` (which wraps [http://extjwnl.sourceforge.net/ extJWNL]), `de.tudarmstadt.ukp.dkpro.wsd.si.lsr` (which wraps [https://code.google.com/p/dkpro-lsr/ DKPro LSR]), and `de.tudarmstadt.ukp.dkpro.wsd.si.uby` (which wraps [https://code.google.com/p/uby/ UBY]).  `de.tudarmstadt.ukp.dkpro.wsd.si.wordnet` can also be used with EuroWordNet (EWN) sense inventories, provided they are in Princeton WordNet format.  (You can use [https://code.google.com/p/jmwnl/ JMWNL] to convert EWN sense inventories to Princeton WordNet format.)
 
+=== Why am I getting a lot of errors or warnings when reading in the Senseval data sets? ===
+
+Many of the Senseval data sets, as originally distributed by the task organizers, contain errors such as incorrect POS tags, references to nonexistent satellite IDs, and references to nonexistent WordNet sense keys.  You can instruct some collection readers and annotators to ignore certain types of errors (e.g., with the `PARAM_IGNORE_MISSING_SATELLITES` configuration parameter), though of course this may lead to reduced accuracy or unpredictable effects with your disambiguation algorithm.  In the `de.tudarmstadt.ukp.dkpro.wsd.senseval` module in the `src/main/resources` directory we provide patch files to fix some of the obvious errors in the data sets.
+
 === Where can I get the !WordNet 1.7 pre-release used by the English Senseval-2 tasks? ===
 
 You probably can't.  This version of WordNet was never officially published, but was made available only to the participants.  We contacted both the WordNet maintainers and the Senseval-2 organizers, and neither was able to locate a copy of this version.  A Senseval-2 participant sent us a copy he had archived, but its sense keys turned out to be incompatible with those of the Senseval-2 data sets.  If you must use this data set, then you could use WordNet 1.7, but keep in mind that you will not be able to achieve full accuracy, since some of the sense keys found in the answer key won't exist in the sense inventory.
