Edited wiki page WSDCorpora through web user interface.

--- a/wiki/WSDCorpora.wiki
+++ b/wiki/WSDCorpora.wiki
@@ -12,7 +12,7 @@
 || 2001 || [http://86.188.143.199/senseval2/ Senseval-2 task: Czech all words] || cs || AW || no || Senseval2AW || custom, text || no || no || no ||
 || 2001 || [http://86.188.143.199/senseval2/ Senseval-2 task: Dutch all words] || nl || AW || no || Senseval2AW || none || no || no || yes ||
 || 2001 || [http://86.188.143.199/senseval2/ Senseval-2 task: English all words] || en || AW || no || Senseval2AW || WordNet 1.7pre || no || no || no ||
-|| 2001 || [http://www.cse.unt.edu/~rada/downloads.html#sensevalsemcor Senseval-2 task: English all words] || en || AW || no || SemCor || WordNet 1.7.1 through 3.0 || yes || yes || yes ||
+|| 2001 || [http://www.cse.unt.edu/~rada/downloads.html#sensevalsemcor Senseval-2 task: English all words] (Rada Mihalcea's conversion) || en || AW || no || SemCor || WordNet 1.7.1 through 3.0 || yes || yes || yes ||
 || 2001 || [http://86.188.143.199/senseval2/ Senseval-2 task: English group lexical sample] || en || LS || yes || Senseval2LS  || WordNet 1.7pre || yes || yes || no ||
 || 2001 || [http://86.188.143.199/senseval2/ Senseval-2 task: English lexical sample] || en || LS || no || Senseval2LS  || WordNet 1.7pre || yes || yes || no ||
 || 2001 || [http://86.188.143.199/senseval2/ Senseval-2 task: Estonian all words] || et || AW || yes || Senseval2AW || Estonian EWN v37 || no || no || no ||
@@ -21,10 +21,10 @@
 || 2001 || [http://86.188.143.199/senseval2/ Senseval-2 task: Korean lexical sample] || ko || LS || yes || Senseval2LS  || custom, DOC || no || no || no ||
 || 2001 || [http://86.188.143.199/senseval2/ Senseval-2 task: Spanish lexical sample] || es || LS || yes || Senseval2LS  || custom, text || no || yes || no ||
 || 2001 || [http://86.188.143.199/senseval2/ Senseval-2 task: Swedish lexical sample] || sv || LS || yes || Senseval2LS  || custom, XML || no || yes || no ||
-|| 2002 || [http://nltk.github.com/nltk_data/packages/corpora/semcor.zip SemCor (NLTK's XML conversion)] || en || AW || no || SemCor || WordNet 3.0 || yes || yes || yes ||
+|| 2002 || [http://nltk.github.com/nltk_data/packages/corpora/semcor.zip SemCor] (NLTK's conversion to XML) || en || AW || no || SemCor || WordNet 3.0 || yes || yes || yes ||
 || 2003 || [http://www.cse.unt.edu/~rada/downloads.html#twa TWA] || en || LS || no || custom XML || custom || yes || yes || yes ||
 || 2004 || [http://www.senseval.org/senseval3 Senseval-3 task 01: English all words] || en || AW || no || Senseval2AW || WordNet 1.7.1 || no || no || no ||
-|| 2004 || [http://www.cse.unt.edu/~rada/downloads.html#sensevalsemcor Senseval-3 task 01: English all words] || en || AW || no || SemCor || WordNet 1.7.1 through 3.0 || yes || yes || yes ||
+|| 2004 || [http://www.cse.unt.edu/~rada/downloads.html#sensevalsemcor Senseval-3 task 01: English all words] (Rada Mihalcea's conversion) || en || AW || no || SemCor || WordNet 1.7.1 through 3.0 || yes || yes || yes ||
 || 2004 || [http://www.senseval.org/senseval3 Senseval-3 task 02: Italian all words] || it || AW || no || ? || ItalWordNet || ? || ? || ? ||
 || 2004 || [http://www.senseval.org/senseval3 Senseval-3 task 03: Basque lexical sample] || eu || LS || yes || custom XML || ? || yes || yes || yes ||
 || 2004 || [http://www.senseval.org/senseval3 Senseval-3 task 04: Catalan lexical sample] || ca || LS || yes || ? || ? || ? || ? || ? ||
